# chatbot

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
chatbot/: adapter.py  config.py
