[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "chatbot"
description = ""
version = '1.0.0'
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Jochen Klar", email = "main@jochenklar.de"},
]
requires-python = ">=3.11"
classifiers = [
  "Environment :: Web Environment",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "chainlit~=2.5.5"
]

[project.optional-dependencies]
openai = [
  "langchain-openai",
]
ollama = [
  "langchain-ollama",
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
repository = "https://github.com/jochenklar/chatbot.git"

[tool.setuptools.packages.find]
include = ["app.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "DJ",   # flake8-django
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "PT",   # flake8-pytest-style
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
  "G",    # flake8-logging-format
  "INT",  # flake8-gettext
  "Q"     # flake8-quotes
]
ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = ["rdmo"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"
]
